--- a/data/io.github.TanmayPatil105.verse.metainfo.xml.in
+++ b/data/io.github.TanmayPatil105.verse.metainfo.xml.in
@@ -3,7 +3,7 @@
 	<id>io.github.TanmayPatil105.verse</id>
 	<launchable type="desktop-id">io.github.TanmayPatil105.verse.desktop</launchable>
 	<name>verse</name>
-	<summary>Fetch lyrics of the song currently playing on Spotify</summary>
+	<summary>Get currently playing Spotify song lyrics</summary>
 	<developer id="io.github.TanmayPatil105">
 		<name>Tanmay Patil</name>
 	</developer>
@@ -45,7 +45,7 @@
 			<image type="source">https://raw.githubusercontent.com/TanmayPatil105/verse/main/images/verse-song.png</image>
 			<caption>Lyrics of current playing song</caption>
 		</screenshot>
-		<screenshot type="default">
+		<screenshot>
 			<image type="source">https://raw.githubusercontent.com/TanmayPatil105/verse/main/images/verse-paginated.png</image>
 			<caption>Paginated view displays previously played songs</caption>
 		</screenshot>
