--- a/data/io.github.TanmayPatil105.verse.metainfo.xml.in
+++ b/data/io.github.TanmayPatil105.verse.metainfo.xml.in
@@ -26,7 +26,16 @@
 	</description>
 
 	<releases>
-		<release version="0.1.2" date="2024-05-28">
+	  <release version="0.1.3" date="2024-07-06">
+			<description>
+				<p>This release adds the following improvements:</p>
+				<ul>
+					<li>Integrate Spotify refresh token generation</li>
+					<li>Improve UI</li>
+				</ul>
+			</description>
+	  </release>
+	  <release version="0.1.2" date="2024-05-28">
 			<description>
 				<p>This release adds the following improvements:</p>
 				<ul>
@@ -34,8 +43,8 @@
 					<li>Fix incorrect lyrics for some songs</li>
 				</ul>
 			</description>
-		</release>
-		<release version="0.1.1" date="2024-05-27">
+	  </release>
+	  <release version="0.1.1" date="2024-05-27">
 			<description>
 				<p>This release adds the following improvements:</p>
 				<ul>
@@ -44,7 +53,7 @@
 					<li>Improved error messages</li>
 				</ul>
 			</description>
-		</release>
+	  </release>
 	</releases>
 
 	<url type="homepage">https://github.com/TanmayPatil105/verse</url>
