--- a/data/io.github.TanmayPatil105.verse.metainfo.xml.in
+++ b/data/io.github.TanmayPatil105.verse.metainfo.xml.in
@@ -31,6 +31,14 @@
 	</branding>
 
 	<releases>
+	  <release version="0.1.6" date="2025-01-02">
+			<description>
+				<p>This release adds the following improvements:</p>
+				<ul>
+					<li>Update dependencies</li>
+				</ul>
+			</description>
+	  </release>
 	  <release version="0.1.5" date="2024-07-23">
 			<description>
 				<p>This release adds the following improvements:</p>
